Cleanup usage of SimpleImmutableEntry, replace with Map.entry